[gd_scene load_steps=11 format=2]

[ext_resource path="res://Resources/Font/AvenuePixel-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Props/HUD.gd" type="Script" id=2]
[ext_resource path="res://Resources/GUI/HP_BG.png" type="Texture" id=3]
[ext_resource path="res://Resources/GUI/HP_OVER.png" type="Texture" id=4]
[ext_resource path="res://Resources/GUI/HP_FILL.png" type="Texture" id=5]
[ext_resource path="res://Resources/Vehicles/vehicle-2.png" type="Texture" id=6]
[ext_resource path="res://Resources/Characters/Diver/player-idle-1.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.921569, 0.627451, 0, 1 )

[sub_resource type="DynamicFont" id=27]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0.6, 0.6, 0.6, 0.105882 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="InfoPanel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
margin_left = 649.0
margin_top = 19.0
margin_right = -289.0
margin_bottom = 104.0
custom_styles/panel = SubResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="InfoPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 27 )
align = 1
valign = 1

[node name="InfoDisplayed" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="HealthBars" type="Node" parent="."]

[node name="Panel" type="Panel" parent="HealthBars"]
margin_left = 15.0
margin_top = 16.0
margin_right = 55.0
margin_bottom = 99.0
rect_scale = Vector2( 15.76, 1.12043 )
custom_styles/panel = SubResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubHPBar" type="TextureProgress" parent="HealthBars/Panel"]
margin_left = 5.0
margin_top = 9.0
margin_right = 69.0
margin_bottom = 49.0
rect_scale = Vector2( 0.489848, 1 )
value = 100.0
texture_under = ExtResource( 3 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )
tint_progress = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PilotHPBar" type="TextureProgress" parent="HealthBars/Panel"]
margin_left = 5.13959
margin_top = 42.8407
margin_right = 133.14
margin_bottom = 82.8407
rect_scale = Vector2( 0.489848, 1 )
value = 100.0
texture_under = ExtResource( 3 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )
tint_progress = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubIcon" type="TextureRect" parent="HealthBars/Panel"]
margin_left = 1.4594
margin_top = 0.892517
margin_right = 177.459
margin_bottom = 125.893
rect_scale = Vector2( 0.02, 0.2 )
texture = ExtResource( 6 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiverIcon" type="TextureRect" parent="HealthBars/Panel"]
margin_left = 0.697975
margin_top = 30.3455
margin_right = 232.698
margin_bottom = 222.345
rect_scale = Vector2( 0.02, 0.2 )
texture = ExtResource( 7 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="InfoDisplayed" to="." method="_on_InfoDisplayed_timeout"]
